--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
       run: |
         # only create if not exists
         $u = 'gene'
-        $pw = 'rdp123'
+        $pw = 'rdp12345!'
         if (-not (Get-LocalUser -Name $u -ErrorAction SilentlyContinue)) {
           net user $u $pw /add
           net localgroup administrators $u /add
@@ -100,7 +100,7 @@ jobs:
         Write-Host "When connecting from Android Microsoft RDP:"
         Write-Host "  - PC name / Host: 0.tcp.ngrok.io:XXXXX  (use exactly as shown; remove 'tcp://')"
         Write-Host "  - Username: gene"
-        Write-Host "  - Password: Rdp123"
+        Write-Host "  - Password: Rdp12345!"
         Write-Host "DO NOT commit your NGROK_AUTHTOKEN to public repos."
         Write-Host "=========================================="
         # keep runner alive so ngrok and RDP stay running while you connect
